--- a/WebContent/public/html/compte_mon_profil(7).html
+++ b/WebContent/public/html/compte_mon_profil(7).html
@@ -61,49 +61,49 @@
               <h6>Pseudo : </h6>
             </div>
             <div class="col-sm-8 d-flex align-items-center flex-column" style="margin-top:1rem;">
-              <div id="id_pseudo"></div>
+              <div id="compteMonProfilPseudo"></div>
             </div>
             <div class="col-sm-4 d-flex align-items-center flex-column" style="margin-top:1rem;">
               <h6>Nom : </h6>
             </div>
             <div class="col-sm-8 d-flex align-items-center flex-column" style="margin-top:1rem;">
-              <div id="id_nom"></div>
+              <div id="compteMonProfilNom"></div>
             </div>
             <div class="col-sm-4 d-flex align-items-center flex-column" style="margin-top:1rem;">
               <h6>Prénom : </h6>
             </div>
             <div class="col-sm-8 d-flex align-items-center flex-column" style="margin-top:1rem;">
-              <div id="id_prenom"></div>
+              <div id="compteMonProfilPrenom"></div>
             </div>
             <div class="col-sm-4 d-flex align-items-center flex-column" style="margin-top:1rem;">
               <h6>Email : </h6>
             </div>
             <div class="col-sm-8 d-flex align-items-center flex-column" style="margin-top:1rem;">
-              <div id="id_email"></div>
+              <div id="compteMonProfilEmail"></div>
             </div>
             <div class="col-sm-4 d-flex align-items-center flex-column" style="margin-top:1rem;">
               <h6>Téléphone : </h6>
             </div>
             <div class="col-sm-8 d-flex align-items-center flex-column" style="margin-top:1rem;">
-              <div id="id_telephone"></div>
+              <div id="compteMonProfilTelephone"></div>
             </div>
             <div class="col-sm-4 d-flex align-items-center flex-column" style="margin-top:1rem;">
               <h6>Rue : </h6>
             </div>
             <div class="col-sm-8 d-flex align-items-center flex-column" style="margin-top:1rem;">
-              <div id="id_rue"></div>
+              <div id="compteMonProfilRue"></div>
             </div>
             <div class="col-sm-4 d-flex align-items-center flex-column" style="margin-top:1rem;">
               <h6>Code postal : </h6>
             </div>
             <div class="col-sm-8 d-flex align-items-center flex-column" style="margin-top:1rem;">
-              <div id="id_code_postal"></div>
+              <div id="compteMonProfilCodePostal"></div>
             </div>
             <div class="col-sm-4 d-flex align-items-center flex-column" style="margin-top:1rem;">
               <h6>Ville : </h6>
             </div>
             <div class="col-sm-8 d-flex align-items-center flex-column" style="margin-top:1rem;">
-              <div id="id_ville"></div>
+              <div id="compteMonProfilVille"></div>
             </div>
           </div>
         </div>
@@ -119,7 +119,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="../js/tools/logger.js"></script>
-    <script src="../js/tools/htmlBuiler.js"></script>
+    <script src="../js/tools/htmlBuilder.js"></script>
     <script src="../js/compte_mon_profil.js"></script>
   </body>
 </html>
