--- a/WebContent/public/html/enchere_edition(10).html
+++ b/WebContent/public/html/enchere_edition(10).html
@@ -55,7 +55,7 @@
     <!-- Main content -->
     <div class="row justify-content-md-center" style="margin-top:2rem;">
       <div class="col col-lg-3">
-        <img src="../img/chat.jpeg">
+        <img src="../testDev/img/chat.jpeg">
       </div>
 
       <div class="col col-lg-7">
@@ -66,19 +66,19 @@
               <div class="row" style="margin:1rem;">
                 <label class="col-sm-4 col-form-label">Article : </label>
                 <div class="col-sm-8">
-                  <div id="inputArticle"></div>
+                  <div id="echereDetailsArticle"></div>
                 </div>
               </div>
               <div class="row" style="margin:1rem;">
                 <label class="col-sm-4 col-form-label">Description : </label>
                 <div class="col-sm-8">
-                  <div id="inputDescription"></div>
+                  <div id="echereDetailsDescription"></div>
                 </div>
               </div>
               <div class="row" style="margin:1rem;">
                 <label class="col-sm-4 col-form-label">Categorie : </label>
                 <div class="col-sm-8">
-                  <div id="inputCategorie"></div>
+                  <div id="echereDetailsCategorie"></div>
                 </div>
               </div>
               <div class="row" style="margin:1rem;">
@@ -90,19 +90,19 @@
               <div class="row" style="margin:1rem;">
                 <label class="col-sm-4 col-form-label">Mise à prix : </label>
                 <div class="col-sm-8">
-                  <div id="inputMiseAPrix"></div>
+                  <div id="echereDetailsMiseAPrix"></div>
                 </div>
               </div>
               <div class="row" style="margin:1rem;">
                 <label class="col-sm-4 col-form-label">Debut de l'enchère : </label>
                 <div class="col-sm-8">
-                  <div id="inputDateDebut"></div>
+                  <div id="echereDetailsDateDebut"></div>
                 </div>
               </div>
               <div class="row" style="margin:1rem;">
                 <label class="col-sm-4 col-form-label">Fin de l'enchère : </label>
                 <div class="col-sm-8">
-                  <div id="inputDateFin"></div>
+                  <div id="echereDetailsDateFin"></div>
                 </div>
               </div>
             </div>
@@ -123,19 +123,19 @@
               <div class="row" style="margin:1rem;">
                 <label class="col-sm-4 col-form-label">Rue : </label>
                 <div class="col-sm-8">
-                  <div id="inputRue"></div>
+                  <div id="echereDetailsRue"></div>
                 </div>
               </div>
               <div class="row" style="margin:1rem;">
                 <label class="col-sm-4 col-form-label">Code postal : </label>
                 <div class="col-sm-8">
-                  <div id="inputCodePostal"></div>
+                  <div id="echereDetailsCodePostal"></div>
                 </div>
               </div>
               <div class="row" style="margin:1rem;">
                 <label class="col-sm-4 col-form-label">Ville : </label>
                 <div class="col-sm-8">
-                  <div id="inputVille"></div>
+                  <div id="echereDetailsVille"></div>
                 </div>
               </div>
 
@@ -159,7 +159,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="../js/tools/logger.js"></script>
-    <script src="../js/tools/htmlBuiler.js"></script>
+    <script src="../js/tools/htmlBuilder.js"></script>
     <script src="../js/enchere_edition.js"></script>
   </body>
 </html>
