--- a/WebContent/public/html/enchere_resultat_perdu(12).html
+++ b/WebContent/public/html/enchere_resultat_perdu(12).html
@@ -47,7 +47,7 @@
     <div class="container">
       <div class="row justify-content-md-center">
         <div class="col-md-auto">
-          <h1><div id="gagant"></div> a remporté l'enchère</h1>
+          <h1><div id="enchereResPerdantGagnant"></div> a remporté l'enchère</h1>
         </div>
       </div>
     </div>
@@ -55,47 +55,47 @@
     <!-- Main content -->
     <div class="row justify-content-md-center" style="margin-top:2rem;">
       <div class="col col-lg-3">
-        <img src="../img/chat.jpeg">
+        <img src="../testDev/img/chat.jpeg">
       </div>
 
       <div class="col col-lg-7">
         <div class="row" style="margin:1rem;">
-          <div id="inputArticle"></div>
+          <div id="enchereResPerdantArticle"></div>
         </div>
         <div class="row" style="margin:1rem;">
           <label class="col-sm-4 col-form-label">Description : </label>
           <div class="col-sm-8">
-            <div id="inputDescription"></div>
+            <div id="enchereResPerdantDescription"></div>
           </div>
         </div>
         <div class="row" style="margin:1rem;">
           <label class="col-sm-4 col-form-label">Meilleur offre : </label>
           <div class="col-sm-8">
-            <div id="inputMeilleurOffre"></div>
+            <div id="enchereResPerdantMeilleurOffre"></div>
           </div>
         </div>
         <div class="row" style="margin:1rem;">
           <label class="col-sm-4 col-form-label">Mise à prix : </label>
           <div class="col-sm-8">
-            <div id="inputMiseAPrix"></div>
+            <div id="enchereResPerdantMiseAPrix"></div>
           </div>
         </div>
         <div class="row" style="margin:1rem;">
           <label class="col-sm-4 col-form-label">Fin de l'enchère : </label>
           <div class="col-sm-8">
-            <div id="inputDateFin"></div>
+            <div id="enchereResPerdantDateFin"></div>
           </div>
         </div>
         <div class="row" style="margin:1rem;">
           <label class="col-sm-4 col-form-label">Retrait : </label>
           <div class="col-sm-8">
-            <div id="inputRetrait"></div>
+            <div id="enchereResPerdantRetrait"></div>
           </div>
         </div>
         <div class="row" style="margin:1rem;">
           <label class="col-sm-4 col-form-label">Vendeur : </label>
           <div class="col-sm-8">
-            <div id="inputVendeur"></div>
+            <div id="enchereResPerdantVendeur"></div>
           </div>
         </div>
       </div>
@@ -114,7 +114,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="../js/tools/logger.js"></script>
-    <script src="../js/tools/htmlBuiler.js"></script>
+    <script src="../js/tools/htmlBuilder.js"></script>
     <script src="../js/enchere_resultat_perdu.js"></script>
   </body>
 </html>
