--- a/WebContent/public/html/accueil(4-5).html
+++ b/WebContent/public/html/accueil(4-5).html
@@ -67,7 +67,7 @@
                   <label>Catégorie</label>
                 </div>
                 <div class="col-8">
-                  <select class="form-control" id="exampleFormControlSelect1">
+                  <select class="form-control" id="selectCategories">
                     <option>toutes</option>
                     <option>cat 2</option>
                     <option>cat 3</option>
