REFACTOR HTML - refactor enchres - refactor (1)html

--- a/WebContent/public/html/compte_authentification.html
+++ b/WebContent/public/html/compte_authentification.html
@@ -20,7 +20,7 @@
 
     <!-- top bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-      <a class="navbar-brand" href="./index(1).html">ENI-Encheres</a>
+      <a class="navbar-brand" href="./index.html">ENI_encheres</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -28,7 +28,7 @@
       <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="./index(1).html">Encheres</a>
+            <a class="nav-link" href="./index.html">Encheres</a>
           </li>
         </ul>
       </div>
@@ -92,7 +92,7 @@
 
     <div class="container">
       <div class="row justify-content-md-center">
-        <a href="./compte_creation(3).html" class="btn btn-outline-success my-2 my-sm-0" role="button">Créer un compte</a>
+        <a href="./compte_creation.html" class="btn btn-outline-success my-2 my-sm-0" role="button">Créer un compte</a>
       </div>
     </div>
 
