--- a/WebContent/public/html/compte_edition.html
+++ b/WebContent/public/html/compte_edition.html
@@ -20,7 +20,7 @@
 
     <!-- top bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-      <a class="navbar-brand" href="./accueil(4-5).html">ENI-Encheres</a>
+      <a class="navbar-brand" href="./accueil.html">ENI_encheres</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -28,16 +28,16 @@
       <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="./accueil(4-5).html">Enchères</a>
+            <a class="nav-link" href="./accueil.html">Enchères</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./encheres_nouveau(9).html">Vender un article</a>
+            <a class="nav-link" href="./encheres_nouveau.html">Vender un article</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./compte_mon_profil(7).html">Mon profil</a>
+            <a class="nav-link" href="./compte_mon_profil.html">Mon profil</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./index(1).html">Déconnexion</a>
+            <a class="nav-link" href="./index.html">Déconnexion</a>
           </li>
         </ul>
       </div>
@@ -182,11 +182,11 @@
     <div class="row" style="margin-top:1rem;">
       <div class="col-6 d-flex align-items-end flex-column">
         <!-- Enregistrer en base -->
-        <a href="./accueil(4-5).html" class="btn btn-outline-success my-2 my-sm-0" role="button">Enregistrer</a>
+        <a href="./accueil.html" class="btn btn-outline-success my-2 my-sm-0" role="button">Enregistrer</a>
       </div>
       <div class="col-6">
         <!-- Supprimer en base -->
-        <a href="./index(1).html" class="btn btn-outline-success my-2 my-sm-0" role="button">Supprimer mon compte</a>
+        <a href="./index.html" class="btn btn-outline-success my-2 my-sm-0" role="button">Supprimer mon compte</a>
       </div>
     </div>
 
