--- a/WebContent/public/html/encheres_details.html
+++ b/WebContent/public/html/encheres_details.html
@@ -6,7 +6,7 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <title>Edition d'une enchere</title>
+    <title>Detail d'une enchere</title>
     <link rel="stylesheet" href="../css/style.css">
   </head>
   <body>
@@ -20,7 +20,7 @@
 
     <!-- top bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-      <a class="navbar-brand" href="./accueil(4-5).html">ENI-Encheres</a>
+      <a class="navbar-brand" href="./accueil.html">ENI_encheres</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -28,16 +28,16 @@
       <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="./accueil(4-5).html">Enchères</a>
+            <a class="nav-link" href="./accueil.html">Enchères</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./enchere_nouveau(9).html">Vender un article</a>
+            <a class="nav-link" href="./encheres_nouveau.html">Vender un article</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./compte_mon_profil(7).html">Mon profil</a>
+            <a class="nav-link" href="./compte_mon_profil.html">Mon profil</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./index(1).html">Déconnexion</a>
+            <a class="nav-link" href="./index.html">Déconnexion</a>
           </li>
         </ul>
       </div>
@@ -47,7 +47,7 @@
     <div class="container">
       <div class="row justify-content-md-center">
         <div class="col-md-auto">
-          <h1>Edition d'une enchere</h1>
+          <h1>Detail d'une enchere</h1>
         </div>
       </div>
     </div>
@@ -64,10 +64,7 @@
           <div class="form-group row">
             <div class="col">
               <div class="row" style="margin:1rem;">
-                <label class="col-sm-4 col-form-label">Article : </label>
-                <div class="col-sm-8">
-                  <div id="echereDetailsArticle"></div>
-                </div>
+                <div id="echereDetailsArticle"></div>
               </div>
               <div class="row" style="margin:1rem;">
                 <label class="col-sm-4 col-form-label">Description : </label>
@@ -82,9 +79,9 @@
                 </div>
               </div>
               <div class="row" style="margin:1rem;">
-                <label class="col-sm-4 col-form-label">Photo de l'article : </label>
+                <label class="col-sm-4 col-form-label">Meilleur offre : </label>
                 <div class="col-sm-8">
-                  <button class="btn btn-outline-success my-2 my-sm-0" type="submit" disabled>UPLOADER</button>
+                  <div id="echereDetailsMeilleurOffre"></div>
                 </div>
               </div>
               <div class="row" style="margin:1rem;">
@@ -94,51 +91,23 @@
                 </div>
               </div>
               <div class="row" style="margin:1rem;">
-                <label class="col-sm-4 col-form-label">Debut de l'enchère : </label>
-                <div class="col-sm-8">
-                  <div id="echereDetailsDateDebut"></div>
-                </div>
-              </div>
-              <div class="row" style="margin:1rem;">
                 <label class="col-sm-4 col-form-label">Fin de l'enchère : </label>
                 <div class="col-sm-8">
                   <div id="echereDetailsDateFin"></div>
                 </div>
               </div>
-            </div>
-          </div>
-
-        </form>
-      </div>
-    </div>
-
-    <div class="row justify-content-md-center" style="margin-top:2rem;">
-      <div class="col-8">
-        <h5>Retrait</h5>
-        <form>
-
-          <div class="form-group row">
-            <div class="col">
-
               <div class="row" style="margin:1rem;">
-                <label class="col-sm-4 col-form-label">Rue : </label>
+                <label class="col-sm-4 col-form-label">Retrait : </label>
                 <div class="col-sm-8">
-                  <div id="echereDetailsRue"></div>
+                  <div id="echereDetailsRetrait"></div>
                 </div>
               </div>
               <div class="row" style="margin:1rem;">
-                <label class="col-sm-4 col-form-label">Code postal : </label>
+                <label class="col-sm-4 col-form-label">Vendeur : </label>
                 <div class="col-sm-8">
-                  <div id="echereDetailsCodePostal"></div>
+                  <div id="echereDetailsVendeur"></div>
                 </div>
               </div>
-              <div class="row" style="margin:1rem;">
-                <label class="col-sm-4 col-form-label">Ville : </label>
-                <div class="col-sm-8">
-                  <div id="echereDetailsVille"></div>
-                </div>
-              </div>
-
             </div>
           </div>
 
@@ -148,9 +117,17 @@
 
     <div class="row justify-content-md-center">
       <div class="col-4">
-        <a href="./accueil(4-5).html" class="btn btn-outline-success my-2 my-sm-0" role="button">Enregistrer</a>
-        <a href="./accueil(4-5).html" class="btn btn-outline-success my-2 my-sm-0" role="button">Annuler</a>
-        <a href="./accueil(4-5).html" class="btn btn-outline-success my-2 my-sm-0" role="button">Annuler la vente</a>
+        <div class="row">
+          <label class="col-sm-4 col-form-label">Ma proposition : </label>
+          <div class="col-sm-8">
+            <input type="number" class="form-control" placeholder="0">
+          </div>
+        </div>
+      </div>
+      <div class="col-4">
+        <div class="row justify-content-md-center">
+          <a href="#" class="btn btn-outline-success my-2 my-sm-0" role="button">Enchérir</a>
+        </div>
       </div>
     </div>
 
@@ -160,6 +137,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="../js/tools/logger.js"></script>
     <script src="../js/tools/htmlBuilder.js"></script>
-    <script src="../js/enchere_edition.js"></script>
+    <script src="../js/encheres_details.js"></script>
   </body>
 </html>
