--- a/WebContent/public/html/encheres_resultat_perdu.html
+++ b/WebContent/public/html/encheres_resultat_perdu.html
@@ -20,7 +20,7 @@
 
     <!-- top bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-      <a class="navbar-brand" href="./accueil(4-5).html">ENI-Encheres</a>
+      <a class="navbar-brand" href="./accueil.html">ENI_encheres</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -28,16 +28,16 @@
       <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="./accueil(4-5).html">Enchères</a>
+            <a class="nav-link" href="./accueil.html">Enchères</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./encheres_nouveau(9).html">Vender un article</a>
+            <a class="nav-link" href="./encheres_nouveau.html">Vender un article</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./compte_mon_profil(7).html">Mon profil</a>
+            <a class="nav-link" href="./compte_mon_profil.html">Mon profil</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./index(1).html">Déconnexion</a>
+            <a class="nav-link" href="./index.html">Déconnexion</a>
           </li>
         </ul>
       </div>
@@ -115,6 +115,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="../js/tools/logger.js"></script>
     <script src="../js/tools/htmlBuilder.js"></script>
-    <script src="../js/enchere_resultat_perdu.js"></script>
+    <script src="../js/encheres_resultat_perdu.js"></script>
   </body>
 </html>
