--- a/WebContent/public/html/index.html
+++ b/WebContent/public/html/index.html
@@ -20,7 +20,7 @@
 
     <!-- top bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-      <a class="navbar-brand" href="./index(1).html">ENI-Encheres</a>
+      <a class="navbar-brand" href="./index.html">ENI_encheres</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -28,7 +28,7 @@
       <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="./compte_authentification(2).html">S'inscrire - se connecter</a>
+            <a class="nav-link" href="./compte_authentification.html">S'inscrire - se connecter</a>
           </li>
         </ul>
       </div>
