--- a/WebContent/public/html/encheres_nouveau.html
+++ b/WebContent/public/html/encheres_nouveau.html
@@ -31,7 +31,7 @@
             <a class="nav-link" href="./accueil.html">Enchères</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./encheres_nouveau.html">Vender un article</a>
+            <a class="nav-link" href="./encheres_nouveau.html">Vendre un article</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./compte_mon_profil.html">Mon profil</a>
