appel client done

--- a/WebContent/public/html/compte_creation.html
+++ b/WebContent/public/html/compte_creation.html
@@ -37,7 +37,7 @@
             <a class="nav-link" href="./compte_mon_profil.html">Mon profil</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./index.html">Déconnexion</a>
+            <a class="nav-link" href="/index.html">Déconnexion</a>
           </li>
         </ul>
       </div>
