--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -28,7 +28,7 @@
       <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="./compte_authentification.html">S'inscrire - se connecter</a>
+            <a class="nav-link" href="/ENI_encheres/public/html/compte_authentification.html">S'inscrire - se connecter</a>
           </li>
         </ul>
       </div>
@@ -58,13 +58,14 @@
                   <label>Catégorie</label>
                 </div>
                 <div class="col-8">
-                  <select class="form-control" id="filtreCategorie">
+                  <div id="selectCategories"></div>
+                  <!-- <select class="form-control" id="exampleFormControlSelect1">
                     <option>toutes</option>
                     <option>cat 2</option>
                     <option>cat 3</option>
                     <option>cat 4</option>
                     <option>cat 5</option>
-                  </select>
+                  </select> -->
                 </div>
               </div>
             </div>
@@ -81,11 +82,11 @@
     <div id="enchereToPrint"></div>
 
     <!-- export -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="../js/tools/logger.js"></script>
-    <script src="../js/tools/htmlBuilder.js"></script>
-    <script src="../js/index.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" crossorigin="anonymous"></script>
+    <script src="/ENI_encheres/public/js/tools/logger.js" type"text/javascript"></script>
+    <script src="/ENI_encheres/public/js/tools/htmlBuilder.js" type"text/javascript"></script>
+    <script src="/ENI_encheres/public/js/index.js" type"text/javascript"></script>
   </body>
 </html>
