--- a/WebContent/public/html/accueil.html
+++ b/WebContent/public/html/accueil.html
@@ -37,7 +37,7 @@
             <a class="nav-link" href="./compte_mon_profil.html">Mon profil</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./index.html">Déconnexion</a>
+            <a class="nav-link" href="/ENI_encheres/index.html">Déconnexion</a>
           </li>
         </ul>
       </div>
@@ -67,13 +67,14 @@
                   <label>Catégorie</label>
                 </div>
                 <div class="col-8">
-                  <select class="form-control" id="exampleFormControlSelect1">
+                  <div id="selectCategories"></div>
+                  <!-- <select class="form-control" id="exampleFormControlSelect1">
                     <option>toutes</option>
                     <option>cat 2</option>
                     <option>cat 3</option>
                     <option>cat 4</option>
                     <option>cat 5</option>
-                  </select>
+                  </select> -->
                 </div>
               </div>
             </div>
@@ -154,11 +155,11 @@
     <div id="enchereToPrint"></div>
 
     <!-- export -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="../js/tools/logger.js"></script>
-    <script src="../js/tools/htmlBuilder.js"></script>
-    <script src="../js/accueil.js"></script>
+    <script src="/ENI_encheres/public/js/tools/logger.js"></script>
+    <script src="/ENI_encheres/public/js/tools/htmlBuilder.js"></script>
+    <script src="/ENI_encheres/public/js/accueil.js"></script>
   </body>
 </html>
