--- a/WebContent/public/html/compte_authentification.html
+++ b/WebContent/public/html/compte_authentification.html
@@ -17,6 +17,24 @@
 
 
     -->
+    
+    
+	<!-- Modal -->
+	<div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+	  <div class="modal-dialog modal-dialog-centered" role="document">
+	    <div class="modal-content">
+	      <div class="modal-header">
+	        <h5 class="modal-title" id="exampleModalLabel">Erreur Connexion</h5>
+	        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+	          <span aria-hidden="true">&times;</span>
+	        </button>
+	      </div>
+	      <div class="modal-body">
+	      	<h6>Login ou mot de passe incorrect</h6>
+	      </div>
+	    </div>
+	  </div>
+	</div>
 
     <!-- top bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
@@ -28,7 +46,7 @@
       <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="./index.html">Encheres</a>
+            <a class="nav-link" href="/ENI_encheres/index.html">Encheres</a>
           </li>
         </ul>
       </div>
@@ -98,10 +116,10 @@
 
     <!-- export -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="../js/tools/logger.js"></script>
-    <script src="../js/tools/htmlBuilder.js"></script>
-    <script src="../js/compte_authentication.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" crossorigin="anonymous"></script>
+    <script src="/ENI_encheres/public/js/tools/logger.js" type"text/javascript"></script>
+    <script src="/ENI_encheres/public/js/tools/htmlBuilder.js" type"text/javascript"></script>
+    <script src="/ENI_encheres/public/js/compte_authentification.js" type"text/javascript"></script>
   </body>
 </html>
