Ajout de la fonction deconnexion Utilisateur

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -87,6 +87,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" crossorigin="anonymous"></script>
     <script src="/ENI_encheres/public/js/tools/logger.js" type"text/javascript"></script>
     <script src="/ENI_encheres/public/js/tools/htmlBuilder.js" type"text/javascript"></script>
+    <script src="/ENI_encheres/public/js/tools/cookies.js"></script>
     <script src="/ENI_encheres/public/js/index.js" type"text/javascript"></script>
   </body>
 </html>
