--- a/WebContent/public/html/encheres_edition.html
+++ b/WebContent/public/html/encheres_edition.html
@@ -37,7 +37,7 @@
             <a class="nav-link" href="./compte_mon_profil.html">Mon profil</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="index.html">Déconnexion</a>
+            <a onclick="deconnexion()" class="nav-link" href="index.html">Déconnexion</a>
           </li>
         </ul>
       </div>
@@ -160,6 +160,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="../js/tools/logger.js"></script>
     <script src="../js/tools/htmlBuilder.js"></script>
+    <script src="../js/tools/cookies.js"></script>
     <script src="../js/encheres_edition.js"></script>
   </body>
 </html>
