--- a/WebContent/public/html/compte_authentification.html
+++ b/WebContent/public/html/compte_authentification.html
@@ -88,7 +88,7 @@
         <div class="col col-lg-8">
           <div class="row">
             <div class="col-6">
-              <a onclick="tryToAuth();" class="btn btn-outline-success my-2 my-sm-0" role="button">Connexion</a>
+              <a onclick="tryToAuth()" class="btn btn-outline-success my-2 my-sm-0" role="button">Connexion</a>
             </div>
             <div class="col-6">
               <div class="row">
@@ -120,6 +120,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" crossorigin="anonymous"></script>
     <script src="/ENI_encheres/public/js/tools/logger.js" type"text/javascript"></script>
     <script src="/ENI_encheres/public/js/tools/htmlBuilder.js" type"text/javascript"></script>
+    <script src="/ENI_encheres/public/js/tools/cookies.js"></script>
     <script src="/ENI_encheres/public/js/compte_authentification.js" type"text/javascript"></script>
   </body>
 </html>
