--- a/WebContent/public/html/encheres_details.html
+++ b/WebContent/public/html/encheres_details.html
@@ -37,7 +37,7 @@
             <a class="nav-link" href="./compte_mon_profil.html">Mon profil</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="index.html">Déconnexion</a>
+            <a class="nav-link" href="/ENI_encheres/index.html">Déconnexion</a>
           </li>
         </ul>
       </div>
@@ -132,11 +132,11 @@
     </div>
 
     <!-- export -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="../js/tools/logger.js"></script>
-    <script src="../js/tools/htmlBuilder.js"></script>
-    <script src="../js/encheres_details.js"></script>
+    <script src="/ENI_encheres/public/js/tools/logger.js"></script>
+    <script src="/ENI_encheres/public/js/tools/htmlBuilder.js"></script>
+    <script src="/ENI_encheres/public/js/encheres_details.js"></script>
   </body>
 </html>
