--- a/WebContent/public/html/encheres_nouveau.html
+++ b/WebContent/public/html/encheres_nouveau.html
@@ -107,7 +107,7 @@
               <div class="row" style="margin:1rem;">
                 <label id="prix_initial" class="col-sm-4 col-form-label">Mise à prix : </label>
                 <div class="col-sm-8">
-                  <input id="prix_initial" min="0" type="number" class="form-control" placeholder="0">
+                  <input id="test" min="0" type="number" class="form-control" placeholder="0">
                 </div>
               </div>
               <div class="row" style="margin:1rem;">
@@ -180,6 +180,6 @@
     <script src="/ENI_encheres/public/js/tools/logger.js"></script>
     <script src="/ENI_encheres/public/js/tools/htmlBuilder.js"></script>
     <script src="/ENI_encheres/public/js/tools/cookies.js"></script>
-    <script src="/ENI_encheres/public/js/compte_creation.js"></script>
+    <script src="/ENI_encheres/public/js/enchere_nouveau.js"></script>
   </body>
 </html>
