--- a/WebContent/public/html/encheres_nouveau.html
+++ b/WebContent/public/html/encheres_nouveau.html
@@ -107,7 +107,7 @@
               <div class="row" style="margin:1rem;">
                 <label id="prix_initial" class="col-sm-4 col-form-label">Mise à prix : </label>
                 <div class="col-sm-8">
-                  <input id="test" min="0" type="number" class="form-control" placeholder="0">
+                  <input id="prixInitial" min="0" type="number" class="form-control" placeholder="0">
                 </div>
               </div>
               <div class="row" style="margin:1rem;">
@@ -165,7 +165,7 @@
 
     <div class="row">
       <div class="col-6 d-flex align-items-end flex-column">
-        <a onclick="validation();" class="btn btn-outline-success my-2 my-sm-0" role="button">Créer</a>
+        <a onclick="sendNewEnchere();" class="btn btn-outline-success my-2 my-sm-0" role="button">Créer</a>
       </div>
       <div class="col-6">
         <a href="./accueil.html" class="btn btn-outline-success my-2 my-sm-0" role="button">Annuler</a>
