--- a/WebContent/public/html/compte_authentification.html
+++ b/WebContent/public/html/compte_authentification.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="/ENI_encheres/public/css/bootstrap.min.css">
 
     <title>Authentification</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="/ENI_encheres/public/css/style.css">
   </head>
   <body>
 
@@ -115,9 +115,9 @@
     </div>
 
     <!-- export -->
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js" crossorigin="anonymous"></script>
+    <script src="/ENI_encheres/public/js/tools/jquery-3.4.1.min.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" crossorigin="anonymous"></script>
+    <script src="/ENI_encheres/public/js/tools/bootstrap.min.js"></script>
     <script src="/ENI_encheres/public/js/tools/logger.js" type"text/javascript"></script>
     <script src="/ENI_encheres/public/js/tools/htmlBuilder.js" type"text/javascript"></script>
     <script src="/ENI_encheres/public/js/tools/cookies.js"></script>
