--- a/WebContent/public/html/compte_creation.html
+++ b/WebContent/public/html/compte_creation.html
@@ -4,10 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="public/css/bootstrap.min.css">
     <title>Creation de compte</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="public/css/style.css">
   </head>
   <body>
 
@@ -165,12 +164,12 @@
     </div>
 
     <!-- export -->
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-	<script src="/ENI_encheres/public/js/tools/logger.js"></script>
-    <script src="/ENI_encheres/public/js/tools/htmlBuilder.js"></script>
-    <script src="/ENI_encheres/public/js/tools/cookies.js"></script>
-    <script src="/ENI_encheres/public/js/compte_creation.js"></script>
+    <script src="/ENI_encheres/public/js/tools/jquery-3.4.1.min.js" crossorigin="anonymous" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous" type="text/javascript"></script>
+ 	<script src="/ENI_encheres/public/js/tools/bootstrap.min.js" type="text/javascript"></script>
+ 	<script src="/ENI_encheres/public/js/tools/logger.js" type="text/javascript"></script>
+    <script src="/ENI_encheres/public/js/tools/htmlBuilder.js" type="text/javascript"></script>
+    <script src="/ENI_encheres/public/js/tools/cookies.js" type="text/javascript"></script>
+    <script src="/ENI_encheres/public/js/compte_creation.js" type="text/javascript"></script>
   </body>
 </html>
