--- a/WebContent/public/html/encheres_nouveau.html
+++ b/WebContent/public/html/encheres_nouveau.html
@@ -4,10 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="/ENI_encheres/public/css/bootstrap.min.css">
     <title>Nouveau troc</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="/ENI_encheres/public/css/style.css">
   </head>
   <body>
 
@@ -72,7 +71,7 @@
     <!-- Main content -->
     <div class="row justify-content-md-center" style="margin-top:2rem;">
       <div class="col col-lg-3">
-        <img src="../img/chat.jpeg">
+        <img src="/ENI_encheres/public/testDev/img/chat.jpeg">
       </div>
 
       <div class="col col-lg-7">
@@ -107,7 +106,7 @@
               <div class="row" style="margin:1rem;">
                 <label id="prix_initial" class="col-sm-4 col-form-label">Mise à prix : </label>
                 <div class="col-sm-8">
-                  <input id="prix_initial" min="0" type="number" class="form-control" placeholder="0">
+                  <input id="prixInitial" min="0" type="number" class="form-control" placeholder="0">
                 </div>
               </div>
               <div class="row" style="margin:1rem;">
@@ -152,7 +151,7 @@
               <div class="row" style="margin:1rem;">
                 <label class="col-sm-4 col-form-label">Ville : </label>
                 <div class="col-sm-8">
-                  <input id="ville" type="text" class="form-control" placeholder="Ville  ">
+                  <input id="ville" type="text" class="form-control" placeholder="Ville">
                 </div>
               </div>
 
@@ -165,7 +164,7 @@
 
     <div class="row">
       <div class="col-6 d-flex align-items-end flex-column">
-        <a onclick="validation();" class="btn btn-outline-success my-2 my-sm-0" role="button">Créer</a>
+        <a onclick="sendNewEnchere();" class="btn btn-outline-success my-2 my-sm-0" role="button">Créer</a>
       </div>
       <div class="col-6">
         <a href="./accueil.html" class="btn btn-outline-success my-2 my-sm-0" role="button">Annuler</a>
@@ -173,10 +172,9 @@
     </div>
 
     <!-- export -->
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
+    <script src="/ENI_encheres/public/js/tools/jquery-3.4.1.min.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
+    <script src="/ENI_encheres/public/js/tools/bootstrap.min.js"></script>
     <script src="/ENI_encheres/public/js/tools/logger.js"></script>
     <script src="/ENI_encheres/public/js/tools/htmlBuilder.js"></script>
     <script src="/ENI_encheres/public/js/tools/cookies.js"></script>
